* OPENDNSSEC-261: Ldns fails to parse RR that seems syntactically correct.
* OPENDNSSEC-269: Crash when multiple threads access ixfr struct. 
* OPENDNSSEC-281: Commandhandler sometimes unresponsive.
* OPENDNSSEC-318: Don't stop dns and xfr handlers if these threads have not
  yet been started.
* OPENDNSSEC-319: Fix TSIG segfault on signer shutdown.


OpenDNSSEC 1.4.0a3 - 2012-08-08

* OPENDNSSEC-258: Optionally include cka_id in output to DelegationSignerSubmitCommand.

Bugfixes:

* SUPPORT-27: ods-ksmutil: simplify zone delete so that it only marks keys 
  as dead (rather than actually removing them). Leave the key removal to purge
  jobs.
* SUPPORT-29: Signer Engine: Fix ods-signer clear <zone> command exits
  prematurely [OPENDNSSEC-289].
* SUPPORT-30: Signer Engine: RRSIGs are left in the signed zone when
  authoritative RRsets become glue [OPENDNSSEC-282].
* OPENDNSSEC-278: ods-ksmutil processes waiting forever to get DB lock
* OPENDNSSEC-290: Signer Engine: Fix false conflict when changing CNAME into 
  other RRtype.
* OPENDNSSEC-298: Enforcer: Only unlink existing pidfile on exit if we wrote it.
* OPENDNSSEC-304: Signer Engine: Check pidfile on startup, if pidfile exists
  and corresponding process is running, then complain and exit.
* OPENDNSSEC-306: Can't delete zone until Enforcer made signconf.
* Fix assertion error when printing signed zone with empty non-terminals and NSEC.
* Make setting QUERY ID in XFR requests more random.


OpenDNSSEC 1.4.0a2 - 2012-05-24

* OPENDNSSEC-226: Change in conf.xml: Configure the DNS listener IP address
  with /Listener/Interface/Address instead of /Listener/Interface/IPv{4,6}.
* OPENDNSSEC-228: Signer Engine: Make 'ods-signer update' reload signconfs
  even if zonelist has not changed.
* OPENDNSSEC-231: Signer Engine: Allow for Classless IN-ADDR.ARPA names
  (RFC 2317).
* OPENDNSSEC-249: ods-ksmutil: If key export finds nothing to do then say so
  rather than display nothing which might be misinterpreted.