@@ -1,3 +1,6 @@
+6 September 2012: Matthijs
+- OPENDNSSEC-325: Don't include RRSIG records when DO bit is not set.
+
 5 September 2012: Matthijs
 - OPENDNSSEC-318: Don't stop dns and xfr handlers if these threads have not
   yet been started.
